--- a/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentListDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminDepartmentListDialog.razor
@@ -6,7 +6,7 @@ else
 {
     <MudDataGrid MultiSelection="true" Items="@_departments" Sortable="true" Filterable="true" QuickFilter="@QuickFilter">
         <ToolBarContent>
-            <MudText Typo="Typo.h6">Periodic Departments</MudText>
+            <MudText Typo="Typo.h6">Departments</MudText>
             <MudSpacer />
             <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
                       AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
