--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -9,7 +9,7 @@
             </MudTabPanel>
             <MudTabPanel Text=@L["Closed Questions"]><AdminClosedQuestions /></MudTabPanel>
             <MudTabPanel Text=@L["Open Questions"]><AdminOpenQuestions /></MudTabPanel>
-            <MudTabPanel Text=@L["Maintenance"]><AdminMaintenance /></MudTabPanel>
+@*            <MudTabPanel Text=@L["Maintenance"]><AdminMaintenance /></MudTabPanel>*@
         </MudTabs>
     </Authorized>
     <NotAuthorized>
