--- a/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Admin/Dialogs/AdminUserDialog.razor
@@ -40,7 +40,7 @@ else
                     @if (ShareResource.IsEn())
                     {
                         <MudItem xs="6">
-                            <MudSelect @bind-Value="@_openedUser.DepartmentId"
+                            <MudSelect @bind-Value="@_departmentId"
                                T="int"
                                OffsetY="true"
                                CloseIcon="@Icons.Material.Filled.LocationCity"
@@ -56,7 +56,7 @@ else
                     else
                     {
                         <MudItem xs="6">
-                            <MudSelect @bind-Value="@_openedUser.DepartmentId"
+                            <MudSelect @bind-Value="@_departmentId"
                                T="int"
                                OffsetY="true"
                                CloseIcon="@Icons.Material.Filled.LocationCity"
@@ -72,7 +72,7 @@ else
                     @if (ShareResource.IsEn())
                     {
                         <MudItem xs="6">
-                            <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@_openedUser.JobId"
+                            <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@_jobId"
                                OffsetY="true" RequiredError=@L["Job Title is required!"] HelperText=@L["Select Job Title"] AdornmentColor="Color.Tertiary">
                                 @foreach (Job job in _jobs)
                                 {
@@ -84,7 +84,7 @@ else
                     else
                     {
                         <MudItem xs="6">
-                            <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@_openedUser.JobId"
+                            <MudSelect Required="true" T="int" Label=@L["Select Job Title"] @bind-Value="@_jobId"
                                OffsetY="true" RequiredError=@L["Job Title is required!"] HelperText=@L["Select Job Title"] AdornmentColor="Color.Tertiary">
                                 @foreach (Job job in _jobs)
                                 {
